# reddit-scraper

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_openai.py  test_pagination.py  utils.py
analyze/: apify_user_analyze.py  cache.py  post_analyse_by_user.py  prompt_all_posts.py  reddit_thread_flattener.py  run.py  thread_analyzer.py  utils.py
apify/: apify_scrap_profile.py  apify_to_csv.py
prompt/: questions.csv
results/: post_comments.json  subreddit.json  subreddit_search.json  users_agentforce.csv
results/analyze/: analysis.txt  posts_aggregated.csv  user_aggregated.csv
results/comments/: post_100_comments.json  post_10_comments.json  post_11_comments.json  post_12_comments.json  post_13_comments.json  post_14_comments.json  post_15_comments.json  post_16_comments.json  post_17_comments.json  post_18_comments.json  post_19_comments.json  post_1_comments.json  post_20_comments.json  post_21_comments.json  post_22_comments.json  post_23_comments.json  post_24_comments.json  post_25_comments.json  post_26_comments.json  post_27_comments.json  post_28_comments.json  post_29_comments.json  post_2_comments.json  post_30_comments.json  post_31_comments.json  post_32_comments.json  post_33_comments.json  post_34_comments.json  post_35_comments.json  post_36_comments.json  post_37_comments.json  post_38_comments.json  post_39_comments.json  post_3_comments.json  (+165 more)
scrap/: reddit_post copy.py  reddit_post.py  reddit_subreddits copy.py  reddit_subreddits.py  user_extractor.py  user_profile.py
settings/: user-agents.json
utils/: jsons_to_csv.py
(+790 files in other folders)
